@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2022 Joël Krähemann
+ * Copyright (C) 2005-2023 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -88,7 +88,7 @@ typedef enum{
   AGS_CORE_AUDIO_DEVIN_APP_BUFFER_5,
   AGS_CORE_AUDIO_DEVIN_APP_BUFFER_6,
   AGS_CORE_AUDIO_DEVIN_APP_BUFFER_7,
-}AgsCore_AudioDevinAppBufferMode;
+}AgsCoreAudioDevinAppBufferMode;
 
 /**
  * AgsCoreAudioDevinSyncFlags:
@@ -120,9 +120,9 @@ struct _AgsCoreAudioDevin
 {
   GObject gobject;
 
-  guint flags;
-  guint connectable_flags;
-  volatile guint sync_flags;
+  AgsCoreAudioDevinFlags flags;
+  AgsConnectableFlags connectable_flags;
+  volatile AgsCoreAudioDevinSyncFlags sync_flags;
   
   GRecMutex obj_mutex;
 
@@ -130,11 +130,11 @@ struct _AgsCoreAudioDevin
 
   guint dsp_channels;
   guint pcm_channels;
-  guint format;
+  AgsSoundcardFormat format;
   guint buffer_size;
   guint samplerate;
 
-  guint app_buffer_mode;
+  AgsCoreAudioDevinAppBufferMode app_buffer_mode;
 
   GRecMutex **app_buffer_mutex;
 
@@ -186,9 +186,9 @@ GType ags_core_audio_devin_flags_get_type();
 
 GQuark ags_core_audio_devin_error_quark();
 
-gboolean ags_core_audio_devin_test_flags(AgsCoreAudioDevin *core_audio_devin, guint flags);
-void ags_core_audio_devin_set_flags(AgsCoreAudioDevin *core_audio_devin, guint flags);
-void ags_core_audio_devin_unset_flags(AgsCoreAudioDevin *core_audio_devin, guint flags);
+gboolean ags_core_audio_devin_test_flags(AgsCoreAudioDevin *core_audio_devin, AgsCoreAudioDevinFlags flags);
+void ags_core_audio_devin_set_flags(AgsCoreAudioDevin *core_audio_devin, AgsCoreAudioDevinFlags flags);
+void ags_core_audio_devin_unset_flags(AgsCoreAudioDevin *core_audio_devin, AgsCoreAudioDevinFlags flags);
 
 void ags_core_audio_devin_switch_buffer_flag(AgsCoreAudioDevin *core_audio_devin);
 
