@@ -803,103 +803,6 @@ ags_core_audio_server_disconnect(AgsConnectable *connectable)
 		   (GDestroyNotify) g_object_unref);
 }
 
-/**
- * ags_core_audio_server_test_flags:
- * @core_audio_server: the #AgsCoreAudioServer
- * @flags: the flags
- *
- * Test @flags to be set on @core_audio_server.
- * 
- * Returns: %TRUE if flags are set, else %FALSE
- *
- * Since: 3.0.0
- */
-gboolean
-ags_core_audio_server_test_flags(AgsCoreAudioServer *core_audio_server, guint flags)
-{
-  gboolean retval;  
-  
-  GRecMutex *core_audio_server_mutex;
-
-  if(!AGS_IS_CORE_AUDIO_SERVER(core_audio_server)){
-    return(FALSE);
-  }
-
-  /* get core audio server mutex */
-  core_audio_server_mutex = AGS_CORE_AUDIO_SERVER_GET_OBJ_MUTEX(core_audio_server);
-
-  /* test */
-  g_rec_mutex_lock(core_audio_server_mutex);
-
-  retval = (flags & (core_audio_server->flags)) ? TRUE: FALSE;
-  
-  g_rec_mutex_unlock(core_audio_server_mutex);
-
-  return(retval);
-}
-
-/**
- * ags_core_audio_server_set_flags:
- * @core_audio_server: the #AgsCoreAudioServer
- * @flags: see #AgsCoreAudioServerFlags-enum
- *
- * Enable a feature of @core_audio_server.
- *
- * Since: 3.0.0
- */
-void
-ags_core_audio_server_set_flags(AgsCoreAudioServer *core_audio_server, guint flags)
-{
-  GRecMutex *core_audio_server_mutex;
-
-  if(!AGS_IS_CORE_AUDIO_SERVER(core_audio_server)){
-    return;
-  }
-
-  /* get core audio server mutex */
-  core_audio_server_mutex = AGS_CORE_AUDIO_SERVER_GET_OBJ_MUTEX(core_audio_server);
-
-  //TODO:JK: add more?
-
-  /* set flags */
-  g_rec_mutex_lock(core_audio_server_mutex);
-
-  core_audio_server->flags |= flags;
-  
-  g_rec_mutex_unlock(core_audio_server_mutex);
-}
-    
-/**
- * ags_core_audio_server_unset_flags:
- * @core_audio_server: the #AgsCoreAudioServer
- * @flags: see #AgsCoreAudioServerFlags-enum
- *
- * Disable a feature of @core_audio_server.
- *
- * Since: 3.0.0
- */
-void
-ags_core_audio_server_unset_flags(AgsCoreAudioServer *core_audio_server, guint flags)
-{  
-  GRecMutex *core_audio_server_mutex;
-
-  if(!AGS_IS_CORE_AUDIO_SERVER(core_audio_server)){
-    return;
-  }
-
-  /* get core audio server mutex */
-  core_audio_server_mutex = AGS_CORE_AUDIO_SERVER_GET_OBJ_MUTEX(core_audio_server);
-
-  //TODO:JK: add more?
-
-  /* unset flags */
-  g_rec_mutex_lock(core_audio_server_mutex);
-
-  core_audio_server->flags &= (~flags);
-  
-  g_rec_mutex_unlock(core_audio_server_mutex);
-}
-
 void
 ags_core_audio_server_set_url(AgsSoundServer *sound_server,
 			      gchar *url)
