@@ -405,9 +405,6 @@ ags_audio_unit_devin_adjust_delay_and_attack
 ags_audio_unit_devin_realloc_buffer
 ags_audio_unit_devin_new
 ags_audio_unit_server_get_type
-ags_audio_unit_server_test_flags
-ags_audio_unit_server_set_flags
-ags_audio_unit_server_unset_flags
 ags_audio_unit_server_find_url
 ags_audio_unit_server_find_client
 ags_audio_unit_server_find_port
@@ -2744,9 +2741,6 @@ ags_core_audio_devout_adjust_delay_and_attack
 ags_core_audio_devout_realloc_buffer
 ags_core_audio_devout_new
 ags_core_audio_server_get_type
-ags_core_audio_server_test_flags
-ags_core_audio_server_set_flags
-ags_core_audio_server_unset_flags
 ags_core_audio_server_find_url
 ags_core_audio_server_find_client
 ags_core_audio_server_find_port
@@ -4117,9 +4111,6 @@ ags_sfz_group_insert_control
 ags_sfz_group_lookup_control
 ags_sfz_group_new
 ags_audio_container_get_type
-ags_audio_container_test_flags
-ags_audio_container_set_flags
-ags_audio_container_unset_flags
 ags_audio_container_check_suffix
 ags_audio_container_find_sound_resource
 ags_audio_container_add_audio_signal
